@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.tarr_mobil_tv" name="TarrMobiltv" version="1.0.3" provider-name="heg, vargalex">
+<addon id="plugin.video.tarr_mobil_tv" name="TarrMobiltv" version="1.0.4" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -16,6 +16,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news> 
+			1.0.4 - PHPSESSID cookie kinyerése és használata
 			1.0.3 - headers fix
 			1.0.2 - felhasználónév vagy telefonszám használat hozzáadva
 			1.0.1 - device token javítva
